--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -7,15 +7,18 @@ max_epochs: 30      # --num-epochs
 max_steps: 400000  # --num-steps, -1 means no limit
 
 accelerator: gpu
-devices: 1
+devices: 2
 precision: 32   # choices=[16, 32]
 
 # mixed precision for extra speed-up
 # precision: 16
 
 # perform a validation loop every N training epochs
-check_val_every_n_epoch: 1
+# check_val_every_n_epoch: 1
+val_check_interval: 500
 
 # set True to to ensure deterministic results
 # makes training slower but gives more reproducibility than just setting seeds
 deterministic: False
+
+
