--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -7,17 +7,19 @@ defaults:
 
 model_checkpoint:
   dirpath: ${paths.output_dir}/checkpoints
-  filename: "epoch_{epoch:03d}"
-  monitor: "val/acc"
-  mode: "max"
+  filename: "{step}-{epoch}-{val_loss:.4f}-{test_loss:.4f}-{train_per_step:.4f}"
+  monitor: "val_loss"
+  mode: "min"
   save_last: True
   auto_insert_metric_name: False
+  every_n_epochs: 1 # save_interval: 1
+  save_top_k: 10
   
 
 early_stopping:
-  monitor: "val/acc"
+  monitor: "val_loss"
   patience: 150
-  mode: "max"
+  mode: "min"
 
 model_summary:
   max_depth: -1
