--- a/configs/logger/tensorboard.yaml
+++ b/configs/logger/tensorboard.yaml
@@ -3,7 +3,7 @@
 tensorboard:
   _target_: lightning.pytorch.loggers.tensorboard.TensorBoardLogger
   save_dir: "${paths.output_dir}/tensorboard/"
-  name: null
+  name: "pretraining pcqm4mv2"
   log_graph: False
   default_hp_metric: True
   prefix: ""
