--- a/configs/callbacks/default.yaml
+++ b/configs/callbacks/default.yaml
@@ -17,8 +17,8 @@ model_checkpoint:
   
 
 early_stopping:
-  monitor: "val_loss"
-  patience: 150
+  monitor: "val_loss" # both regression task
+  patience: 150       # ANI1: 500, MD17: 300, PCQM4MV2: 150, QM9-FT: 1500, QM9: 1500
   mode: "min"
 
 model_summary:
