--- a/configs/data/ANI1.yaml
+++ b/configs/data/ANI1.yaml
@@ -6,7 +6,7 @@ batch_size: 2048 # Needs to be divisible by the number of devices (e.g., if in a
 inference_batch_size: 2048   # Batch size for inference, e.g., validation and testing
 
 splits: null  # Optionally provide your own train/val/test splits as list of indices. If None, use standard splits
-train_val_test_split: [null, 100, 100]      # 10_000
+train_val_test_split: [0.8, 0.05, null]      # 10_000
 
 num_workers: 20
 pin_memory: False
