--- a/configs/logger/csv.yaml
+++ b/configs/logger/csv.yaml
@@ -2,6 +2,6 @@
 
 csv:
   _target_: lightning.pytorch.loggers.csv_logs.CSVLogger
-  save_dir: "${paths.output_dir}"
+  save_dir: "${paths.output_dir}/csv/"
   name: "pretraining pcqm4mv2"
   prefix: ""
