--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -3,8 +3,8 @@ _target_: lightning.pytorch.trainer.Trainer
 default_root_dir: ${paths.output_dir}
 
 min_epochs: 1 # prevents early stopping
-max_epochs: 30      # --num-epochs
-max_steps: 400000  # --num-steps, -1 means no limit
+max_epochs: 30      # --num-epochs                      # pcqm4mv2: 30, ANI1: 3000, MD17: 3000, QM9: 3000, 3000
+max_steps: 400000  # --num-steps, -1 means no limit     # pcqm4mv2: 400000, ANI1: null, MD17: null, QM9: 300000, 300000
 
 accelerator: gpu
 devices: 2
@@ -14,8 +14,8 @@ precision: 32   # choices=[16, 32]
 # precision: 16
 
 # perform a validation loop every N training epochs
-# check_val_every_n_epoch: 1
-val_check_interval: 500
+check_val_every_n_epoch: 1         # pcqm4mv2: 1, ANI1: 10, MD17: 10, QM9: 10, 10
+# val_check_interval: 500
 
 # set True to to ensure deterministic results
 # makes training slower but gives more reproducibility than just setting seeds
