--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -2,10 +2,10 @@
 
 defaults:
   - _self_
-  - data: mnist # choose datamodule with `test_dataloader()` for evaluation
-  - model: mnist
+  - data: pcqm4mv2 # choose datamodule with `test_dataloader()` for evaluation
+  - model: pcqm4mv2
   - logger: null
-  - trainer: default
+  - trainer: gpu
   - paths: default
   - extras: default
   - hydra: default
