add QM9.yaml from data to prior_model

--- a/configs/data/QM9.yaml
+++ b/configs/data/QM9.yaml
@@ -22,3 +22,4 @@ position_noise_scale: 0.    # Scale of Gaussian noise added to positions.
 denoising_weight: 0.         # Weighting factor for denoising in the loss function.
 denoising_only: False          # If the task is denoising only (then val/test datasets also contain noise).
 standardize: True            # If true, multiply prediction by dataset std and add mean
+prior_model: null       # Which prior model to use      et. Atomref
