--- a/configs/data/pcqm4mv2.yaml
+++ b/configs/data/pcqm4mv2.yaml
@@ -22,3 +22,4 @@ position_noise_scale: 0.04    # Scale of Gaussian noise added to positions.
 denoising_weight: 1.0         # Weighting factor for denoising in the loss function.
 denoising_only: true          # If the task is denoising only (then val/test datasets also contain noise).
 standardize: false            # If true, multiply prediction by dataset std and add mean
+prior_model: null       # Which prior model to use      et. Atomref
