--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -2,9 +2,9 @@
 
 defaults:
   - _self_
-  - data: pcqm4mv2 # choose datamodule with `test_dataloader()` for evaluation
-  - model: pcqm4mv2
-  - logger: null
+  - data: QM9 # choose datamodule with `test_dataloader()` for evaluation
+  - model: QM9
+  - logger: csv
   - trainer: gpu
   - paths: default
   - extras: default
@@ -15,4 +15,4 @@ task_name: "eval"
 tags: ["dev"]
 
 # passing checkpoint path is necessary for evaluation
-ckpt_path: ???
+ckpt_path: logs/train/runs/2025-09-15_10-58-46/checkpoints/last.ckpt
