--- a/configs/logger/csv.yaml
+++ b/configs/logger/csv.yaml
@@ -3,5 +3,5 @@
 csv:
   _target_: lightning.pytorch.loggers.csv_logs.CSVLogger
   save_dir: "${paths.output_dir}/csv/"
-  name: "pretraining pcqm4mv2"
+  name: "eval QM9-homo"
   prefix: ""
