--- a/configs/model/QM9SP.yaml
+++ b/configs/model/QM9SP.yaml
@@ -7,6 +7,8 @@ extras:
   energy_weight: 1.0            # Weighting factor for energies in the loss function
   force_weight: 1.0             # Weighting factor for forces in the loss function
   denoising_weight: 0.         # Weighting factor for denoising in the loss function.
+  contrastive_weight: 0.1
+  reconstruct_weight: 0.1
 
 optimizer:
   _target_: torch.optim.AdamW
