--- a/configs/model/QM9SP.yaml
+++ b/configs/model/QM9SP.yaml
@@ -74,6 +74,7 @@ net:
 
   output_model_noise: null    # The type of output model for denoising    VectorOutput
     # _target_: null
+  reduce_lr_when_bad: false
 
 
 # compile model for faster training with pytorch 2.0
