add contrastive-weight and reconstruct-weight

--- a/configs/model/pcqm4mv2.yaml
+++ b/configs/model/pcqm4mv2.yaml
@@ -7,6 +7,8 @@ extras:
   energy_weight: 0.0            # Weighting factor for energies in the loss function
   force_weight: 1.0             # Weighting factor for forces in the loss function
   denoising_weight: 1.0         # Weighting factor for denoising in the loss function.
+  contrastive_weight: 0.
+  reconstruct_weight: 0.
 
 optimizer:
   _target_: torch.optim.AdamW
