--- a/configs/data/QM9SP.yaml
+++ b/configs/data/QM9SP.yaml
@@ -1,4 +1,4 @@
-_target_: src.data.datamodule.DataModule
+_target_: src.data.datamodule.DataModule        # QM9SP在PCQM4MV2基础上预训练，用于光谱特征提取
 data_dir: ${paths.data_dir}/QM9SP
 dataset_name: QM9SP
 
@@ -9,17 +9,17 @@ splits: null  # Optionally provide your own train/val/test splits as list of ind
 train_val_test_split: [110000, 10000, null]      # 10_000
 
 num_workers: 20
-pin_memory: False
+pin_memory: True
 
 data_arg: homo                # Additional dataset argument, e.g. target property for QM9 or molecule for MD17
 coord_files: null             # Custom coordinate files glob
 embed_files: null             # Custom embedding files glob
 energy_files: null            # Custom energy files glob
 force_files: null             # Custom force files glob
-energy_weight: 1.0            # Weighting factor for energies in the loss function
-force_weight: 1.0             # Weighting factor for forces in the loss function
+energy_weight: 0.0            # Weighting factor for energies in the loss function  # 设置为0时，y不参与损失传递，自监督训练
+force_weight: 0.0             # Weighting factor for forces in the loss function
 position_noise_scale: 0.04    # Scale of Gaussian noise added to positions.
 denoising_weight: 1.0         # Weighting factor for denoising in the loss function.
 denoising_only: True          # If the task is denoising only (then val/test datasets also contain noise).
-standardize: True            # If true, multiply prediction by dataset std and add mean
+standardize: false            # If true, multiply prediction by dataset std and add mean
 prior_model: null       # Which prior model to use      et. Atomref
