--- a/configs/model/QM9SP.yaml
+++ b/configs/model/QM9SP.yaml
@@ -4,11 +4,11 @@ extras:
   lr_warmup_steps: 10000        # How many steps to warm-up over. Defaults to 0 for no warm-up
   ema_alpha_y: 1.0              # The amount of influence of new losses on the exponential moving average of y
   ema_aplha_dy: 1.0             # The amount of influence of new losses on the exponential moving average of dy
-  energy_weight: 1.0            # Weighting factor for energies in the loss function
-  force_weight: 1.0             # Weighting factor for forces in the loss function
-  denoising_weight: 0.         # Weighting factor for denoising in the loss function.
-  contrastive_weight: 0.1
-  reconstruct_weight: 0.1
+  energy_weight: 0.0            # Weighting factor for energies in the loss function
+  force_weight: 0.0             # Weighting factor for forces in the loss function
+  denoising_weight: 1.0         # Weighting factor for denoising in the loss function.
+  contrastive_weight: 1.0       # 加入对比和重构损失
+  reconstruct_weight: 1.0
 
 optimizer:
   _target_: torch.optim.AdamW
@@ -16,18 +16,18 @@ optimizer:
   lr: 0.0004                               
   weight_decay: 0.0
 
-scheduler:    # choices=['cosine', 'reduce_on_plateau']
-  _target_: torch.optim.lr_scheduler.ReduceLROnPlateau
-  _partial_: true
-  mode: min
-  factor: 0.8          # Minimum learning rate before early stop
-  patience: 15         # Patience for lr-schedule. Patience per eval-interval of validation
-  min_lr: 1e-7        # Minimum learning rate before early stopping
-
-# scheduler:
-#   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+# scheduler:    # choices=['cosine', 'reduce_on_plateau']
+#   _target_: torch.optim.lr_scheduler.ReduceLROnPlateau
 #   _partial_: true
-#   T_max: 300000       # Cosine length if lr_schedule is cosine.
+#   mode: min
+#   factor: 0.8          # Minimum learning rate before early stop
+#   patience: 15         # Patience for lr-schedule. Patience per eval-interval of validation
+#   min_lr: 1e-7        # Minimum learning rate before early stopping
+
+scheduler:
+  _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+  _partial_: true
+  T_max: 300000       # Cosine length if lr_schedule is cosine.
 
 # scheduler:
 #   _target_: torch.optim.lr_scheduler.CosineAnnealingWarmRestarts
@@ -62,30 +62,28 @@ net:
   max_num_neighbors: 32                   # Maximum number of neighbors to consider in the network
   # standardize: false                      # If true, multiply prediction by dataset std and add mean
   reduce_op: add                          # Reduce operation to apply to atomic predictions, choices=['add', 'mean'] 
-  position_noise_scale: 0.              # Scale of Gaussian noise added to positions. 
+  position_noise_scale: 0.04              # Scale of Gaussian noise added to positions. 
 
   load_model: null                     # Path to model checkpoint to load before training
-  pretrained_model: null                      # If true, load a pretrained model from torchmd-net
+  pretrained_model: denoised-pcqm4mv2-v2.ckpt                      # If true, load a pretrained model from torchmd-net
 
   prior_model: null       # Which prior model to use      et. Atomref
   # _target_: src.models.components.priors.Atomref
 
   output_model: Scalar      # The type of output model      Scalar
 
-  output_model_noise: null    # The type of output model for denoising    VectorOutput
+  output_model_noise: VectorOutput    # The type of output model for denoising    VectorOutput
     # _target_: null
   reduce_lr_when_bad: false
   use_dataset_md17: false
 
-  uv_model: null # SpecFormer
+  uv_model: SpecFormer # SpecFormer
   input_data_norm_type: log10
-  contrastive_weight: 0.0
   output_model_spec: null
   output_model_mol: null
   # SpecFormer [uv, ir, raman]
   patch_len: [20,50,50]
   stride: [10,25,25]
-  reconstruct_weight: 0.0
   mask_ratios: [0.1,0.1,0.1]
 
 
