--- a/configs/model/QM9SP.yaml
+++ b/configs/model/QM9SP.yaml
@@ -27,7 +27,7 @@ optimizer:
 scheduler:
   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
   _partial_: true
-  T_max: 300000       # Cosine length if lr_schedule is cosine.
+  T_max: 400000       # Cosine length if lr_schedule is cosine.
 
 # scheduler:
 #   _target_: torch.optim.lr_scheduler.CosineAnnealingWarmRestarts
@@ -65,7 +65,7 @@ net:
   position_noise_scale: 0.04              # Scale of Gaussian noise added to positions. 
 
   load_model: null                     # Path to model checkpoint to load before training
-  pretrained_model: denoised-pcqm4mv2-v2.ckpt                      # If true, load a pretrained model from torchmd-net
+  pretrained_model: logs/train/runs/2025-09-24_22-03-23/checkpoints/step=399999-epoch=7-val_loss=0.1232-test_loss=0.2625-train_per_step=0.1221.ckpt                      # If true, load a pretrained model from torchmd-net
 
   prior_model: null       # Which prior model to use      et. Atomref
   # _target_: src.models.components.priors.Atomref
@@ -76,6 +76,8 @@ net:
     # _target_: null
   reduce_lr_when_bad: false
   use_dataset_md17: false
+  lr_factor: 0.8
+  lr_patience: 15
 
   uv_model: SpecFormer # SpecFormer
   input_data_norm_type: log10
