--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,8 +4,8 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
-  - data: pcqm4mv2
-  - model: pcqm4mv2
+  - data: QM9SP
+  - model: QM9SP
   - callbacks: default
   - logger: many_loggers # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: gpu    # cpu or gpu or ddp
@@ -33,7 +33,7 @@ task_name: "train"
 # tags to help you identify your experiments
 # you can overwrite this in experiment configs
 # overwrite from command line with `python train.py tags="[first_tag, second_tag]"`
-tags: ["dev"]
+tags: ["QM9SP-PT"]
 
 # set False to skip model training
 train: True
