--- a/configs/model/MD17-FT.yaml
+++ b/configs/model/MD17-FT.yaml
@@ -6,26 +6,26 @@ extras:
   ema_aplha_dy: 1.0             # The amount of influence of new losses on the exponential moving average of dy
   energy_weight: 0.2            # Weighting factor for energies in the loss function
   force_weight: 0.8             # Weighting factor for forces in the loss function
-  denoising_weight: 0.         # Weighting factor for denoising in the loss function.
+  denoising_weight: 0.1         # Weighting factor for denoising in the loss function.
 
 optimizer:
   _target_: torch.optim.AdamW
   _partial_: true
-  lr: 0.001                               
+  lr: 0.0005                               
   weight_decay: 0.0
 
-# scheduler:    # choices=['cosine', 'reduce_on_plateau']
-#   _target_: torch.optim.lr_scheduler.ReduceLROnPlateau
-#   _partial_: true
-#   mode: min
-#   factor: 0.8          # Minimum learning rate before early stop
-#   patience: 30         # Patience for lr-schedule. Patience per eval-interval of validation
-#   min_lr: 1e-7        # Minimum learning rate before early stopping
-
-scheduler:
-  _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+scheduler:    # choices=['cosine', 'reduce_on_plateau']
+  _target_: torch.optim.lr_scheduler.ReduceLROnPlateau
   _partial_: true
-  T_max: 400000       # Cosine length if lr_schedule is cosine.
+  mode: min
+  factor: 0.8          # Minimum learning rate before early stop
+  patience: 30         # Patience for lr-schedule. Patience per eval-interval of validation
+  min_lr: 1e-7        # Minimum learning rate before early stopping
+
+# scheduler:
+#   _target_: torch.optim.lr_scheduler.CosineAnnealingLR
+#   _partial_: true
+#   T_max: 400000       # Cosine length if lr_schedule is cosine.
 
 net:
   # _target_: src.models.components.simple_dense_net.SimpleDenseNet   # equivariant-transformer
@@ -53,7 +53,7 @@ net:
   max_num_neighbors: 32                   # Maximum number of neighbors to consider in the network
   # standardize: false                      # If true, multiply prediction by dataset std and add mean
   reduce_op: add                          # Reduce operation to apply to atomic predictions, choices=['add', 'mean'] 
-  position_noise_scale: 0.              # Scale of Gaussian noise added to positions. 
+  position_noise_scale: 0.005              # Scale of Gaussian noise added to positions. 
 
   load_model: null                     # Path to model checkpoint to load before training
   pretrained_model: null                      # If true, load a pretrained model from torchmd-net
