--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,11 +4,11 @@
 # order of defaults determines the order in which configs override each other
 defaults:
   - _self_
-  - data: pcqm4mv2
-  - model: pcqm4mv2-MD17
+  - data: QM9-FT
+  - model: QM9-FT
   - callbacks: default
   - logger: many_loggers # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
-  - trainer: ddp    # cpu or gpu or ddp
+  - trainer: gpu    # cpu or gpu or ddp
   - paths: default
   - extras: default
   - hydra: default
@@ -33,7 +33,7 @@ task_name: "train"
 # tags to help you identify your experiments
 # you can overwrite this in experiment configs
 # overwrite from command line with `python train.py tags="[first_tag, second_tag]"`
-tags: ["MD17-pcqm4mv2-PT"]
+tags: ["QM9-FT"]
 
 # set False to skip model training
 train: True
