--- a/configs/logger/csv.yaml
+++ b/configs/logger/csv.yaml
@@ -3,5 +3,5 @@
 csv:
   _target_: lightning.pytorch.loggers.csv_logs.CSVLogger
   save_dir: "${paths.output_dir}/csv/"
-  name: "QM9-FT"
+  name: "MD17-FT"
   prefix: ""
